--- a/agregarusuario.html
+++ b/agregarusuario.html
@@ -26,16 +26,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Usuarios</a>
+          <a class="nav-link active" href="usuarios.html">Usuarios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Reportes</a>
+          <a class="nav-link" href="reporte.html">Reportes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Promociones</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Salir</a>
+          <a class="nav-link" href="index.html">Salir</a>
         </li>
       </ul>
       <form class="d-flex">
@@ -69,8 +69,8 @@
           <input type="date" class="form-control" id="fechaNacimiento">
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <button type="button" class="btn btn-secondary me-md-2">Cancelar</button>
-          <button type="submit" class="btn btn-primary">Agregar Usuario</button>
+          <button type="button" class="btn btn-secondary me-md-2" onclick="window.location.href = 'usuarios.html';">Cancelar</button>
+          <button type="button" class="btn btn-primary" onclick="window.location.href = 'usuarios.html';">Agregar Usuario</button>
         </div>
       </form>
     </div>
