--- a/usuarios.html
+++ b/usuarios.html
@@ -28,13 +28,13 @@
             <a class="nav-link active" aria-current="page" href="#">Usuarios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Reportes</a>
+            <a class="nav-link" href="reporte.html">Reportes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Promociones</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Salir</a>
+            <a class="nav-link" href="index.html">Salir</a>
           </li>
         </ul>
       </div>
@@ -64,8 +64,7 @@
       <td>28</td>
       <td>No</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -75,8 +74,7 @@
       <td>37</td>
       <td>Sí</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -86,8 +84,7 @@
       <td>22</td>
       <td>No</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -97,8 +94,7 @@
       <td>31</td>
       <td>Sí</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -108,8 +104,7 @@
       <td>26</td>
       <td>Sí</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -119,8 +114,7 @@
       <td>47</td>
       <td>No</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -130,8 +124,7 @@
       <td>29</td>
       <td>No</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -141,8 +134,7 @@
       <td>54</td>
       <td>Sí</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -152,8 +144,7 @@
       <td>43</td>
       <td>Sí</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -163,8 +154,7 @@
       <td>39</td>
       <td>No</td>
       <td class="iconos">
-        <i class="bi bi-eye"></i>
-        <i class="bi bi-pencil"></i>
+        <i class="bi bi-pencil" style="cursor: pointer;" onclick="window.location.href = 'editarusuario.html';"></i>
         <i class="bi bi-trash"></i>
       </td>
     </tr>
@@ -172,7 +162,7 @@
   </table>
 
   <div class="d-grid gap-2 mx-auto" style="max-width: 320px;">
-    <button class="btn btn-primary btn-lg w-100" type="button">Agregar Usuario</button>
+    <button class="btn btn-primary  w-100" type="button" onclick="window.location.href = 'agregarusuario.html';">Agregar Usuario</button>
   </div>
 
 </div>
