--- a/editarusuario.html
+++ b/editarusuario.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+<div class="container my-3">
 <h1 class="text-center mb-4">App Sleep</h1>
 <nav class="navbar navbar-expand-lg navbar-light navbar-bg">
     <div class="container-fluid">
@@ -26,16 +27,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Usuarios</a>
+                    <a class="nav-link active" href="usuarios">Usuarios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reportes</a>
+                    <a class="nav-link" href="reporte.html">Reportes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Promociones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Salir</a>
+                    <a class="nav-link" href="index.html">Salir</a>
                 </li>
             </ul>
             <form class="d-flex">
@@ -49,7 +50,7 @@
         <div class="col-md-8 offset-md-2">
             <div class="card">
                 <div class="card-header">
-                    App Sleep Admin
+                    Editar Usuario
                 </div>
                 <div class="card-body">
                     <form>
@@ -72,8 +73,8 @@
 
 
                         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                            <button type="button" class="btn btn-secondary me-md-2">Cancelar</button>
-                            <button type="submit" class="btn btn-primary">Guardar cambios</button>
+                            <button type="button" class="btn btn-secondary me-md-2" onclick="window.location.href = 'usuarios.html';">Cancelar</button>
+                            <button type="button" class="btn btn-primary" onclick="window.location.href = 'usuarios.html';">Guardar cambios</button>
                         </div>
                     </form>
                 </div>
@@ -84,5 +85,6 @@
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</div>
 </body>
 </html>
