--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App Sleep</title>
     <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+    <style>
+        .title {
+            font-family: 'Roboto', sans-serif;
+        }
+
+        h1 {
+            font-family: 'Roboto', sans-serif;
+        }
+        h2 {
+            font-family: 'Roboto', sans-serif;
+        }
+    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -25,7 +39,7 @@
                     <input type="password" class="form-control" id="password" required>
                 </div>
                 <div class="d-grid">
-                    <button type="submit" class="btn btn-primary">Ingresar</button>
+                    <button type="submit" class="btn btn-primary" onclick="window.location.href = 'usuarios.html';">Ingresar</button>
                 </div>
             </form>
         </div>
