--- a/reporte.html
+++ b/reporte.html
@@ -16,8 +16,8 @@
   </style>
 </head>
 <body>
+<div class="container my-3">
 <h1 class="text-center mb-4">App Sleep</h1>
-
 <nav class="navbar navbar-expand-lg navbar-light navbar-bg">
   <div class="container-fluid">
 
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Usuarios</a>
+          <a class="nav-link" href="usuarios.html">Usuarios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#">Reportes</a>
@@ -36,7 +36,7 @@
           <a class="nav-link" href="#">Promociones</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Salir</a>
+          <a class="nav-link" href="index.html">Salir</a>
         </li>
       </ul>
       <form class="d-flex">
@@ -94,5 +94,6 @@
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</div>
 </body>
 </html>
